<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SANBA</string>
    <string name="titlulo_pickers">Updates tiempos</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="buque_Cap17">
          <p>\n  </p>
        <P><b><i>Capitulo 17: Mediciones marinas\n </i></b></P>
        <p>\n  </p>
    <p>Provee guia para las mediciones y el reporte de petroleo crudo y sus productos.\n</p>
        <p>\n  </p>

        <p><i><b>Capitulo 17.1: Guía para inspecciones marinas \n</b></i></p>

    </string>
    <string name="resultado_correcion_por_techo">Resultado Correcion por techo</string>
    <string name="calcular_correci_n_por_techo">Calcular correción por techo</string>
    <string name="resultado_gov">Resultado GOV</string>
    <string name="calcular_gov">Calcular GOV</string>
    <string name="calcular_ctsh">Calcular CTSH</string>
    <string name="resultado_ctsh">Resultado CTSH</string>
    <string name="enchaquetado">Enchaquetado?</string>
    <string name="ingrese_api_a_60_f">Ingrese API a 60°F</string>
    <string name="resultado_vcf">Resultado VCF</string>
    <string name="calcular_vcf">Calcular VCF</string>
    <string name="temp_liq_f">Temp. Liq. °F</string>
    <string name="temp_amb_f">Temp. Amb. °F</string>
    <string name="temp_ref_lam_f">Temp. Ref. Lam. °F</string>
    <string name="ingrese_tov_en_bbls">Ingrese TOV en Bbls</string>
    <string name="ingrese_fw_en_bbls">Ingrese FW en Bbls</string>
    <string name="calcular_gsv">Calcular GSV</string>
</resources>